# meeting-recorder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  audio_capture.py  config.py  diarizer.py  pyproject.toml  recorder.py  requirements-lite.txt  requirements.txt  start_tray.bat  start_tray.vbs  transcriber.py  tray_app.py
.github/workflows/: ci.yml
tests/: conftest.py  test_config.py  test_energy_diarizer.py  test_formatters.py  test_transcriber_cloud.py  test_transcript_writers.py
